Fixed missing translations for inversion and pump

--- a/src/main/resources/assets/warpdrive/lang/de_DE.lang
+++ b/src/main/resources/assets/warpdrive/lang/de_DE.lang
@@ -64,7 +64,7 @@ item.warpdrive.forcefield.upgrade.camouflage.name=Camouflage Upgrade
 item.warpdrive.forcefield.upgrade.camouflage.tooltip=§4Work in progress\nTarnt das Kraftfeld. Platziere den Block, den du als Tarnung benutzen willst, auf dem Relais. 
 item.warpdrive.forcefield.upgrade.cool.name=Kühler Upgrade
 item.warpdrive.forcefield.upgrade.cool.tooltip=§4Work in progress\nFriere Blöcke und Entities ein. Je mehr Upgrades desto größer der Effekt. Inversions Upgrade für Terraforming Effekt.
-item.warpdrive.forcefield.upgrade.fusion.name=Fusions Upgarde
+item.warpdrive.forcefield.upgrade.fusion.name=Fusions Upgrade
 item.warpdrive.forcefield.upgrade.fusion.tooltip=Verschmelze zwei Kraftfelder, die dieselbe Strahlfrequenz haben.
 item.warpdrive.forcefield.upgrade.invert.name=Inversions Upgrade
 item.warpdrive.forcefield.upgrade.invert.tooltip=§4Work in progress\nOberflächen Effekt zu Raum Effekt. Für Entity Zielerfassung oder Terraforming.
@@ -304,7 +304,9 @@ warpdrive.forcefield.upgrade.statusLine.break=Block Brecher
 warpdrive.forcefield.upgrade.statusLine.camouflage=Camouflage
 warpdrive.forcefield.upgrade.statusLine.cool=Kühler
 warpdrive.forcefield.upgrade.statusLine.fusion=Fusions
-warpdrive.forcefield.upgrade.statusLine.mute=Schalldämper
+warpdrive.forcefield.upgrade.statusLine.invert=Inversions
+warpdrive.forcefield.upgrade.statusLine.mute=Schalldämpfer
+warpdrive.forcefield.upgrade.statusLine.pump=Pumpen
 warpdrive.forcefield.upgrade.statusLine.range=Reichweiten
 warpdrive.forcefield.upgrade.statusLine.rotation=Rotations
 warpdrive.forcefield.upgrade.statusLine.shock=Schock
