--- a/src/main/resources/assets/warpdrive/lang/en_US.lang
+++ b/src/main/resources/assets/warpdrive/lang/en_US.lang
@@ -305,7 +305,9 @@ warpdrive.forcefield.upgrade.statusLine.break=block breaking
 warpdrive.forcefield.upgrade.statusLine.camouflage=camouflage
 warpdrive.forcefield.upgrade.statusLine.cool=cooling
 warpdrive.forcefield.upgrade.statusLine.fusion=fusion
+warpdrive.forcefield.upgrade.statusLine.invert=inversion
 warpdrive.forcefield.upgrade.statusLine.mute=muting
+warpdrive.forcefield.upgrade.statusLine.pump=pumping
 warpdrive.forcefield.upgrade.statusLine.range=increased range
 warpdrive.forcefield.upgrade.statusLine.rotation=rotation
 warpdrive.forcefield.upgrade.statusLine.shock=shock
